[gd_scene load_steps=14 format=2]

[ext_resource path="res://signpost.gd" type="Script" id=1]
[ext_resource path="res://grave1.obj" type="ArrayMesh" id=2]
[ext_resource path="res://grave2.obj" type="ArrayMesh" id=3]
[ext_resource path="res://grave3.obj" type="ArrayMesh" id=4]
[ext_resource path="res://grave4.obj" type="ArrayMesh" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.32, 0.1, 0.32 )

[sub_resource type="SpatialMaterial" id=2]
params_diffuse_mode = 1
params_specular_mode = 3
albedo_color = Color( 0.635294, 0.737255, 0.772549, 1 )

[sub_resource type="ArrayMesh" id=3]
surfaces/0 = {
"aabb": AABB( -0.114142, -0.011547, -0.251547, 0.228284, 0.446816, 0.505689 ),
"array_data": PoolByteArray( 194, 114, 228, 61, 166, 47, 61, 188, 197, 202, 128, 62, 0, 129, 0, 0, 194, 114, 228, 61, 166, 47, 61, 188, 197, 202, 128, 190, 0, 129, 0, 0, 194, 114, 228, 189, 166, 47, 61, 188, 197, 202, 128, 62, 0, 129, 0, 0, 194, 114, 228, 189, 166, 47, 61, 188, 197, 202, 128, 190, 0, 129, 0, 0, 194, 114, 228, 61, 66, 180, 6, 62, 197, 202, 128, 190, 127, 0, 0, 0, 194, 114, 228, 61, 166, 47, 61, 188, 197, 202, 128, 190, 127, 0, 0, 0, 90, 195, 233, 61, 142, 92, 9, 62, 205, 204, 76, 190, 127, 0, 0, 0, 90, 195, 233, 61, 142, 92, 9, 62, 205, 204, 76, 62, 127, 0, 0, 0, 194, 114, 228, 61, 66, 180, 6, 62, 197, 202, 128, 62, 127, 0, 0, 0, 194, 114, 228, 61, 166, 47, 61, 188, 197, 202, 128, 62, 127, 0, 0, 0, 194, 114, 228, 61, 66, 180, 6, 62, 197, 202, 128, 62, 0, 0, 127, 0, 194, 114, 228, 61, 166, 47, 61, 188, 197, 202, 128, 62, 0, 0, 127, 0, 143, 194, 117, 61, 142, 92, 9, 62, 235, 30, 130, 62, 0, 0, 127, 0, 143, 194, 117, 189, 142, 92, 9, 62, 235, 30, 130, 62, 0, 0, 127, 0, 194, 114, 228, 189, 66, 180, 6, 62, 197, 202, 128, 62, 0, 0, 127, 0, 194, 114, 228, 189, 166, 47, 61, 188, 197, 202, 128, 62, 0, 0, 127, 0, 194, 114, 228, 189, 66, 180, 6, 62, 197, 202, 128, 62, 129, 0, 0, 0, 194, 114, 228, 189, 166, 47, 61, 188, 197, 202, 128, 62, 129, 0, 0, 0, 90, 195, 233, 189, 142, 92, 9, 62, 205, 204, 76, 62, 129, 0, 0, 0, 90, 195, 233, 189, 142, 92, 9, 62, 205, 204, 76, 190, 129, 0, 0, 0, 194, 114, 228, 189, 66, 180, 6, 62, 197, 202, 128, 190, 129, 0, 0, 0, 194, 114, 228, 189, 166, 47, 61, 188, 197, 202, 128, 190, 129, 0, 0, 0, 194, 114, 228, 61, 166, 47, 61, 188, 197, 202, 128, 190, 0, 0, 129, 0, 194, 114, 228, 61, 66, 180, 6, 62, 197, 202, 128, 190, 0, 0, 129, 0, 194, 114, 228, 189, 166, 47, 61, 188, 197, 202, 128, 190, 0, 0, 129, 0, 194, 114, 228, 189, 66, 180, 6, 62, 197, 202, 128, 190, 0, 0, 129, 0, 143, 194, 117, 189, 41, 92, 15, 62, 143, 194, 117, 190, 0, 0, 129, 0, 143, 194, 117, 61, 41, 92, 15, 62, 143, 194, 117, 190, 0, 0, 129, 0, 60, 135, 146, 189, 66, 180, 6, 62, 199, 159, 88, 190, 0, 127, 0, 0, 90, 195, 233, 189, 142, 92, 9, 62, 205, 204, 76, 190, 0, 127, 0, 0, 143, 194, 117, 189, 41, 92, 15, 62, 143, 194, 117, 190, 0, 127, 0, 0, 194, 114, 228, 189, 66, 180, 6, 62, 197, 202, 128, 190, 0, 127, 0, 0, 60, 135, 146, 189, 66, 180, 6, 62, 199, 159, 88, 62, 0, 127, 0, 0, 90, 195, 233, 189, 142, 92, 9, 62, 205, 204, 76, 62, 0, 127, 0, 0, 60, 135, 146, 61, 66, 180, 6, 62, 199, 159, 88, 62, 0, 127, 0, 0, 90, 195, 233, 61, 142, 92, 9, 62, 205, 204, 76, 62, 0, 127, 0, 0, 143, 194, 117, 61, 142, 92, 9, 62, 235, 30, 130, 62, 0, 127, 0, 0, 194, 114, 228, 61, 66, 180, 6, 62, 197, 202, 128, 62, 0, 127, 0, 0, 60, 135, 146, 61, 66, 180, 6, 62, 199, 159, 88, 190, 0, 127, 0, 0, 143, 194, 117, 61, 41, 92, 15, 62, 143, 194, 117, 190, 0, 127, 0, 0, 90, 195, 233, 61, 142, 92, 9, 62, 205, 204, 76, 190, 0, 127, 0, 0, 194, 114, 228, 61, 66, 180, 6, 62, 197, 202, 128, 190, 0, 127, 0, 0, 143, 194, 117, 189, 142, 92, 9, 62, 235, 30, 130, 62, 0, 127, 0, 0, 60, 135, 146, 189, 66, 180, 6, 62, 199, 159, 88, 190, 0, 0, 129, 0, 60, 135, 146, 61, 66, 180, 6, 62, 199, 159, 88, 190, 0, 0, 129, 0, 14, 201, 148, 189, 44, 36, 206, 62, 111, 111, 92, 190, 0, 0, 129, 0, 14, 201, 148, 61, 44, 36, 206, 62, 111, 111, 92, 190, 0, 0, 129, 0, 194, 114, 228, 189, 66, 180, 6, 62, 197, 202, 128, 62, 0, 127, 0, 0, 14, 201, 148, 189, 44, 36, 206, 62, 111, 111, 92, 62, 129, 0, 0, 0, 14, 201, 148, 189, 44, 36, 206, 62, 111, 111, 92, 190, 129, 0, 0, 0, 14, 201, 148, 189, 142, 219, 222, 62, 170, 0, 59, 62, 129, 0, 0, 0, 14, 201, 148, 189, 142, 219, 222, 62, 170, 0, 59, 190, 129, 0, 0, 0, 60, 135, 146, 61, 66, 180, 6, 62, 199, 159, 88, 190, 127, 0, 0, 0, 60, 135, 146, 61, 66, 180, 6, 62, 199, 159, 88, 62, 127, 0, 0, 0, 14, 201, 148, 61, 44, 36, 206, 62, 111, 111, 92, 190, 127, 0, 0, 0, 14, 201, 148, 61, 44, 36, 206, 62, 111, 111, 92, 62, 127, 0, 0, 0, 60, 135, 146, 61, 66, 180, 6, 62, 199, 159, 88, 62, 0, 0, 127, 0, 60, 135, 146, 189, 66, 180, 6, 62, 199, 159, 88, 62, 0, 0, 127, 0, 14, 201, 148, 61, 44, 36, 206, 62, 111, 111, 92, 62, 0, 0, 127, 0, 14, 201, 148, 189, 44, 36, 206, 62, 111, 111, 92, 62, 0, 0, 127, 0, 60, 135, 146, 189, 66, 180, 6, 62, 199, 159, 88, 62, 129, 0, 0, 0, 60, 135, 146, 189, 66, 180, 6, 62, 199, 159, 88, 190, 129, 0, 0, 0, 14, 201, 148, 189, 142, 219, 222, 62, 170, 0, 59, 62, 0, 127, 0, 0, 14, 201, 148, 189, 142, 219, 222, 62, 170, 0, 59, 190, 0, 127, 0, 0, 14, 201, 148, 61, 142, 219, 222, 62, 170, 0, 59, 62, 0, 127, 0, 0, 14, 201, 148, 61, 142, 219, 222, 62, 170, 0, 59, 190, 0, 127, 0, 0, 14, 201, 148, 61, 142, 219, 222, 62, 170, 0, 59, 190, 127, 0, 0, 0, 14, 201, 148, 61, 142, 219, 222, 62, 170, 0, 59, 62, 127, 0, 0, 0, 14, 201, 148, 189, 44, 36, 206, 62, 111, 111, 92, 190, 0, 89, 167, 0, 14, 201, 148, 61, 44, 36, 206, 62, 111, 111, 92, 190, 0, 89, 167, 0, 14, 201, 148, 189, 142, 219, 222, 62, 170, 0, 59, 190, 0, 89, 167, 0, 14, 201, 148, 61, 142, 219, 222, 62, 170, 0, 59, 190, 0, 89, 167, 0, 14, 201, 148, 61, 44, 36, 206, 62, 111, 111, 92, 62, 0, 89, 89, 0, 14, 201, 148, 189, 44, 36, 206, 62, 111, 111, 92, 62, 0, 89, 89, 0, 14, 201, 148, 61, 142, 219, 222, 62, 170, 0, 59, 62, 0, 89, 89, 0, 14, 201, 148, 189, 142, 219, 222, 62, 170, 0, 59, 62, 0, 89, 89, 0 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 2, 0, 3, 0, 1, 0, 4, 0, 6, 0, 5, 0, 6, 0, 7, 0, 5, 0, 7, 0, 8, 0, 5, 0, 8, 0, 9, 0, 5, 0, 10, 0, 12, 0, 11, 0, 12, 0, 13, 0, 11, 0, 13, 0, 14, 0, 11, 0, 14, 0, 15, 0, 11, 0, 16, 0, 18, 0, 17, 0, 18, 0, 19, 0, 17, 0, 19, 0, 20, 0, 17, 0, 20, 0, 21, 0, 17, 0, 22, 0, 24, 0, 23, 0, 24, 0, 25, 0, 23, 0, 25, 0, 26, 0, 23, 0, 26, 0, 27, 0, 23, 0, 28, 0, 30, 0, 29, 0, 30, 0, 31, 0, 29, 0, 32, 0, 28, 0, 33, 0, 28, 0, 29, 0, 33, 0, 34, 0, 36, 0, 35, 0, 36, 0, 37, 0, 35, 0, 38, 0, 40, 0, 39, 0, 40, 0, 41, 0, 39, 0, 34, 0, 35, 0, 38, 0, 35, 0, 40, 0, 38, 0, 34, 0, 32, 0, 36, 0, 32, 0, 42, 0, 36, 0, 28, 0, 38, 0, 30, 0, 38, 0, 39, 0, 30, 0, 43, 0, 45, 0, 44, 0, 45, 0, 46, 0, 44, 0, 32, 0, 33, 0, 42, 0, 33, 0, 47, 0, 42, 0, 48, 0, 50, 0, 49, 0, 50, 0, 51, 0, 49, 0, 52, 0, 54, 0, 53, 0, 54, 0, 55, 0, 53, 0, 56, 0, 58, 0, 57, 0, 58, 0, 59, 0, 57, 0, 60, 0, 48, 0, 61, 0, 48, 0, 49, 0, 61, 0, 62, 0, 64, 0, 63, 0, 64, 0, 65, 0, 63, 0, 54, 0, 66, 0, 55, 0, 66, 0, 67, 0, 55, 0, 68, 0, 70, 0, 69, 0, 70, 0, 71, 0, 69, 0, 72, 0, 74, 0, 73, 0, 74, 0, 75, 0, 73, 0 ),
"blend_shape_data": [  ],
"format": 97539,
"index_count": 156,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 76
}

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.262745, 0.337255, 0.333333, 1 )

[sub_resource type="ArrayMesh" id=5]
surfaces/0 = {
"aabb": AABB( -0.114142, -0.011547, -0.211547, 0.228284, 0.566816, 0.425689 ),
"array_data": PoolByteArray( 194, 114, 228, 61, 166, 47, 61, 188, 199, 159, 88, 62, 0, 129, 0, 0, 194, 114, 228, 61, 166, 47, 61, 188, 199, 159, 88, 190, 0, 129, 0, 0, 194, 114, 228, 189, 166, 47, 61, 188, 199, 159, 88, 62, 0, 129, 0, 0, 194, 114, 228, 189, 166, 47, 61, 188, 199, 159, 88, 190, 0, 129, 0, 0, 194, 114, 228, 61, 66, 180, 6, 62, 199, 159, 88, 190, 127, 0, 0, 0, 194, 114, 228, 61, 166, 47, 61, 188, 199, 159, 88, 190, 127, 0, 0, 0, 90, 195, 233, 61, 142, 92, 9, 62, 10, 215, 35, 190, 127, 0, 0, 0, 90, 195, 233, 61, 142, 92, 9, 62, 10, 215, 35, 62, 127, 0, 0, 0, 194, 114, 228, 61, 66, 180, 6, 62, 199, 159, 88, 62, 127, 0, 0, 0, 194, 114, 228, 61, 166, 47, 61, 188, 199, 159, 88, 62, 127, 0, 0, 0, 194, 114, 228, 61, 66, 180, 6, 62, 199, 159, 88, 62, 0, 0, 127, 0, 194, 114, 228, 61, 166, 47, 61, 188, 199, 159, 88, 62, 0, 0, 127, 0, 143, 194, 117, 61, 142, 92, 9, 62, 20, 72, 91, 62, 0, 0, 127, 0, 143, 194, 117, 189, 142, 92, 9, 62, 20, 72, 91, 62, 0, 0, 127, 0, 194, 114, 228, 189, 66, 180, 6, 62, 199, 159, 88, 62, 0, 0, 127, 0, 194, 114, 228, 189, 166, 47, 61, 188, 199, 159, 88, 62, 0, 0, 127, 0, 194, 114, 228, 189, 66, 180, 6, 62, 199, 159, 88, 62, 129, 0, 0, 0, 194, 114, 228, 189, 166, 47, 61, 188, 199, 159, 88, 62, 129, 0, 0, 0, 90, 195, 233, 189, 142, 92, 9, 62, 10, 215, 35, 62, 129, 0, 0, 0, 90, 195, 233, 189, 142, 92, 9, 62, 10, 215, 35, 190, 129, 0, 0, 0, 194, 114, 228, 189, 66, 180, 6, 62, 199, 159, 88, 190, 129, 0, 0, 0, 194, 114, 228, 189, 166, 47, 61, 188, 199, 159, 88, 190, 129, 0, 0, 0, 194, 114, 228, 61, 166, 47, 61, 188, 199, 159, 88, 190, 0, 0, 129, 0, 194, 114, 228, 61, 66, 180, 6, 62, 199, 159, 88, 190, 0, 0, 129, 0, 194, 114, 228, 189, 166, 47, 61, 188, 199, 159, 88, 190, 0, 0, 129, 0, 194, 114, 228, 189, 66, 180, 6, 62, 199, 159, 88, 190, 0, 0, 129, 0, 143, 194, 117, 189, 41, 92, 15, 62, 205, 204, 76, 190, 0, 0, 129, 0, 143, 194, 117, 61, 41, 92, 15, 62, 205, 204, 76, 190, 0, 0, 129, 0, 60, 135, 146, 189, 66, 180, 6, 62, 4, 170, 47, 190, 0, 127, 0, 0, 90, 195, 233, 189, 142, 92, 9, 62, 10, 215, 35, 190, 0, 127, 0, 0, 143, 194, 117, 189, 41, 92, 15, 62, 205, 204, 76, 190, 0, 127, 0, 0, 194, 114, 228, 189, 66, 180, 6, 62, 199, 159, 88, 190, 0, 127, 0, 0, 60, 135, 146, 189, 66, 180, 6, 62, 4, 170, 47, 62, 0, 127, 0, 0, 90, 195, 233, 189, 142, 92, 9, 62, 10, 215, 35, 62, 0, 127, 0, 0, 60, 135, 146, 61, 66, 180, 6, 62, 4, 170, 47, 62, 0, 127, 0, 0, 90, 195, 233, 61, 142, 92, 9, 62, 10, 215, 35, 62, 0, 127, 0, 0, 143, 194, 117, 61, 142, 92, 9, 62, 20, 72, 91, 62, 0, 127, 0, 0, 194, 114, 228, 61, 66, 180, 6, 62, 199, 159, 88, 62, 0, 127, 0, 0, 60, 135, 146, 61, 66, 180, 6, 62, 4, 170, 47, 190, 0, 127, 0, 0, 143, 194, 117, 61, 41, 92, 15, 62, 205, 204, 76, 190, 0, 127, 0, 0, 90, 195, 233, 61, 142, 92, 9, 62, 10, 215, 35, 190, 0, 127, 0, 0, 194, 114, 228, 61, 66, 180, 6, 62, 199, 159, 88, 190, 0, 127, 0, 0, 143, 194, 117, 189, 142, 92, 9, 62, 20, 72, 91, 62, 0, 127, 0, 0, 60, 135, 146, 189, 66, 180, 6, 62, 4, 170, 47, 190, 0, 0, 129, 0, 60, 135, 146, 61, 66, 180, 6, 62, 4, 170, 47, 190, 0, 0, 129, 0, 15, 201, 148, 189, 103, 202, 5, 63, 172, 121, 51, 190, 0, 0, 129, 0, 15, 201, 148, 61, 103, 202, 5, 63, 172, 121, 51, 190, 0, 0, 129, 0, 194, 114, 228, 189, 66, 180, 6, 62, 199, 159, 88, 62, 0, 127, 0, 0, 15, 201, 148, 189, 103, 202, 5, 63, 172, 121, 51, 62, 129, 0, 0, 0, 15, 201, 148, 189, 103, 202, 5, 63, 172, 121, 51, 190, 129, 0, 0, 0, 14, 201, 148, 189, 25, 38, 14, 63, 232, 10, 18, 62, 129, 0, 0, 0, 14, 201, 148, 189, 25, 38, 14, 63, 232, 10, 18, 190, 129, 0, 0, 0, 60, 135, 146, 61, 66, 180, 6, 62, 4, 170, 47, 190, 127, 0, 0, 0, 60, 135, 146, 61, 66, 180, 6, 62, 4, 170, 47, 62, 127, 0, 0, 0, 15, 201, 148, 61, 103, 202, 5, 63, 172, 121, 51, 190, 127, 0, 0, 0, 15, 201, 148, 61, 103, 202, 5, 63, 172, 121, 51, 62, 127, 0, 0, 0, 60, 135, 146, 61, 66, 180, 6, 62, 4, 170, 47, 62, 0, 0, 127, 0, 60, 135, 146, 189, 66, 180, 6, 62, 4, 170, 47, 62, 0, 0, 127, 0, 15, 201, 148, 61, 103, 202, 5, 63, 172, 121, 51, 62, 0, 0, 127, 0, 15, 201, 148, 189, 103, 202, 5, 63, 172, 121, 51, 62, 0, 0, 127, 0, 60, 135, 146, 189, 66, 180, 6, 62, 4, 170, 47, 62, 129, 0, 0, 0, 60, 135, 146, 189, 66, 180, 6, 62, 4, 170, 47, 190, 129, 0, 0, 0, 14, 201, 148, 189, 25, 38, 14, 63, 232, 10, 18, 62, 0, 127, 0, 0, 14, 201, 148, 189, 25, 38, 14, 63, 232, 10, 18, 190, 0, 127, 0, 0, 14, 201, 148, 61, 25, 38, 14, 63, 232, 10, 18, 62, 0, 127, 0, 0, 14, 201, 148, 61, 25, 38, 14, 63, 232, 10, 18, 190, 0, 127, 0, 0, 14, 201, 148, 61, 25, 38, 14, 63, 232, 10, 18, 190, 127, 0, 0, 0, 14, 201, 148, 61, 25, 38, 14, 63, 232, 10, 18, 62, 127, 0, 0, 0, 15, 201, 148, 189, 103, 202, 5, 63, 172, 121, 51, 190, 0, 89, 167, 0, 15, 201, 148, 61, 103, 202, 5, 63, 172, 121, 51, 190, 0, 89, 167, 0, 14, 201, 148, 189, 25, 38, 14, 63, 232, 10, 18, 190, 0, 89, 167, 0, 14, 201, 148, 61, 25, 38, 14, 63, 232, 10, 18, 190, 0, 89, 167, 0, 15, 201, 148, 61, 103, 202, 5, 63, 172, 121, 51, 62, 0, 89, 89, 0, 15, 201, 148, 189, 103, 202, 5, 63, 172, 121, 51, 62, 0, 89, 89, 0, 14, 201, 148, 61, 25, 38, 14, 63, 232, 10, 18, 62, 0, 89, 89, 0, 14, 201, 148, 189, 25, 38, 14, 63, 232, 10, 18, 62, 0, 89, 89, 0 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 2, 0, 3, 0, 1, 0, 4, 0, 6, 0, 5, 0, 6, 0, 7, 0, 5, 0, 7, 0, 8, 0, 5, 0, 8, 0, 9, 0, 5, 0, 10, 0, 12, 0, 11, 0, 12, 0, 13, 0, 11, 0, 13, 0, 14, 0, 11, 0, 14, 0, 15, 0, 11, 0, 16, 0, 18, 0, 17, 0, 18, 0, 19, 0, 17, 0, 19, 0, 20, 0, 17, 0, 20, 0, 21, 0, 17, 0, 22, 0, 24, 0, 23, 0, 24, 0, 25, 0, 23, 0, 25, 0, 26, 0, 23, 0, 26, 0, 27, 0, 23, 0, 28, 0, 30, 0, 29, 0, 30, 0, 31, 0, 29, 0, 32, 0, 28, 0, 33, 0, 28, 0, 29, 0, 33, 0, 34, 0, 36, 0, 35, 0, 36, 0, 37, 0, 35, 0, 38, 0, 40, 0, 39, 0, 40, 0, 41, 0, 39, 0, 34, 0, 35, 0, 38, 0, 35, 0, 40, 0, 38, 0, 34, 0, 32, 0, 36, 0, 32, 0, 42, 0, 36, 0, 28, 0, 38, 0, 30, 0, 38, 0, 39, 0, 30, 0, 43, 0, 45, 0, 44, 0, 45, 0, 46, 0, 44, 0, 32, 0, 33, 0, 42, 0, 33, 0, 47, 0, 42, 0, 48, 0, 50, 0, 49, 0, 50, 0, 51, 0, 49, 0, 52, 0, 54, 0, 53, 0, 54, 0, 55, 0, 53, 0, 56, 0, 58, 0, 57, 0, 58, 0, 59, 0, 57, 0, 60, 0, 48, 0, 61, 0, 48, 0, 49, 0, 61, 0, 62, 0, 64, 0, 63, 0, 64, 0, 65, 0, 63, 0, 54, 0, 66, 0, 55, 0, 66, 0, 67, 0, 55, 0, 68, 0, 70, 0, 69, 0, 70, 0, 71, 0, 69, 0, 72, 0, 74, 0, 73, 0, 74, 0, 75, 0, 73, 0 ),
"blend_shape_data": [  ],
"format": 97539,
"index_count": 156,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 76
}

[sub_resource type="ArrayMesh" id=6]
surfaces/0 = {
"aabb": AABB( -0.111547, -0.011547, -0.211547, 0.223104, 0.063094, 0.423104 ),
"array_data": PoolByteArray( 194, 114, 228, 61, 166, 47, 61, 188, 199, 159, 88, 62, 0, 129, 0, 0, 194, 114, 228, 61, 166, 47, 61, 188, 199, 159, 88, 190, 0, 129, 0, 0, 194, 114, 228, 189, 166, 47, 61, 188, 199, 159, 88, 62, 0, 129, 0, 0, 194, 114, 228, 189, 166, 47, 61, 188, 199, 159, 88, 190, 0, 129, 0, 0, 194, 114, 228, 61, 244, 34, 83, 61, 199, 159, 88, 190, 127, 0, 0, 0, 194, 114, 228, 61, 166, 47, 61, 188, 199, 159, 88, 190, 127, 0, 0, 0, 194, 114, 228, 61, 244, 34, 83, 61, 199, 159, 88, 62, 127, 0, 0, 0, 194, 114, 228, 61, 166, 47, 61, 188, 199, 159, 88, 62, 127, 0, 0, 0, 194, 114, 228, 61, 244, 34, 83, 61, 199, 159, 88, 62, 0, 0, 127, 0, 194, 114, 228, 61, 166, 47, 61, 188, 199, 159, 88, 62, 0, 0, 127, 0, 194, 114, 228, 189, 244, 34, 83, 61, 199, 159, 88, 62, 0, 0, 127, 0, 194, 114, 228, 189, 166, 47, 61, 188, 199, 159, 88, 62, 0, 0, 127, 0, 194, 114, 228, 189, 244, 34, 83, 61, 199, 159, 88, 62, 129, 0, 0, 0, 194, 114, 228, 189, 166, 47, 61, 188, 199, 159, 88, 62, 129, 0, 0, 0, 194, 114, 228, 189, 244, 34, 83, 61, 199, 159, 88, 190, 129, 0, 0, 0, 194, 114, 228, 189, 166, 47, 61, 188, 199, 159, 88, 190, 129, 0, 0, 0, 194, 114, 228, 61, 166, 47, 61, 188, 199, 159, 88, 190, 0, 0, 129, 0, 194, 114, 228, 61, 244, 34, 83, 61, 199, 159, 88, 190, 0, 0, 129, 0, 194, 114, 228, 189, 166, 47, 61, 188, 199, 159, 88, 190, 0, 0, 129, 0, 194, 114, 228, 189, 244, 34, 83, 61, 199, 159, 88, 190, 0, 0, 129, 0, 194, 114, 228, 61, 244, 34, 83, 61, 199, 159, 88, 62, 0, 127, 0, 0, 194, 114, 228, 189, 244, 34, 83, 61, 199, 159, 88, 62, 0, 127, 0, 0, 194, 114, 228, 61, 244, 34, 83, 61, 199, 159, 88, 190, 0, 127, 0, 0, 194, 114, 228, 189, 244, 34, 83, 61, 199, 159, 88, 190, 0, 127, 0, 0 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 2, 0, 3, 0, 1, 0, 4, 0, 6, 0, 5, 0, 6, 0, 7, 0, 5, 0, 8, 0, 10, 0, 9, 0, 10, 0, 11, 0, 9, 0, 12, 0, 14, 0, 13, 0, 14, 0, 15, 0, 13, 0, 16, 0, 18, 0, 17, 0, 18, 0, 19, 0, 17, 0, 20, 0, 22, 0, 21, 0, 22, 0, 23, 0, 21, 0 ),
"blend_shape_data": [  ],
"format": 97539,
"index_count": 36,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="ArrayMesh" id=7]
surfaces/0 = {
"aabb": AABB( -0.154142, -0.011547, -0.151547, 0.308284, 1.31124, 0.305689 ),
"array_data": PoolByteArray( 35, 47, 27, 62, 166, 47, 61, 188, 35, 47, 27, 62, 0, 129, 0, 0, 35, 47, 27, 62, 166, 47, 61, 188, 35, 47, 27, 190, 0, 129, 0, 0, 35, 47, 27, 190, 166, 47, 61, 188, 35, 47, 27, 62, 0, 129, 0, 0, 35, 47, 27, 190, 166, 47, 61, 188, 35, 47, 27, 190, 0, 129, 0, 0, 35, 47, 27, 62, 66, 180, 6, 62, 35, 47, 27, 190, 127, 0, 0, 0, 35, 47, 27, 62, 166, 47, 61, 188, 35, 47, 27, 190, 127, 0, 0, 0, 112, 215, 29, 62, 142, 92, 9, 62, 205, 204, 204, 189, 127, 0, 0, 0, 112, 215, 29, 62, 142, 92, 9, 62, 205, 204, 204, 61, 127, 0, 0, 0, 35, 47, 27, 62, 66, 180, 6, 62, 35, 47, 27, 62, 127, 0, 0, 0, 35, 47, 27, 62, 166, 47, 61, 188, 35, 47, 27, 62, 127, 0, 0, 0, 35, 47, 27, 62, 66, 180, 6, 62, 35, 47, 27, 62, 0, 0, 127, 0, 35, 47, 27, 62, 166, 47, 61, 188, 35, 47, 27, 62, 0, 0, 127, 0, 205, 204, 204, 61, 142, 92, 9, 62, 112, 215, 29, 62, 0, 0, 127, 0, 205, 204, 204, 189, 142, 92, 9, 62, 112, 215, 29, 62, 0, 0, 127, 0, 35, 47, 27, 190, 66, 180, 6, 62, 35, 47, 27, 62, 0, 0, 127, 0, 35, 47, 27, 190, 166, 47, 61, 188, 35, 47, 27, 62, 0, 0, 127, 0, 35, 47, 27, 190, 66, 180, 6, 62, 35, 47, 27, 62, 129, 0, 0, 0, 35, 47, 27, 190, 166, 47, 61, 188, 35, 47, 27, 62, 129, 0, 0, 0, 112, 215, 29, 190, 142, 92, 9, 62, 205, 204, 204, 61, 129, 0, 0, 0, 112, 215, 29, 190, 142, 92, 9, 62, 205, 204, 204, 189, 129, 0, 0, 0, 35, 47, 27, 190, 66, 180, 6, 62, 35, 47, 27, 190, 129, 0, 0, 0, 35, 47, 27, 190, 166, 47, 61, 188, 35, 47, 27, 190, 129, 0, 0, 0, 35, 47, 27, 62, 166, 47, 61, 188, 35, 47, 27, 190, 0, 0, 129, 0, 35, 47, 27, 62, 66, 180, 6, 62, 35, 47, 27, 190, 0, 0, 129, 0, 35, 47, 27, 190, 166, 47, 61, 188, 35, 47, 27, 190, 0, 0, 129, 0, 35, 47, 27, 190, 66, 180, 6, 62, 35, 47, 27, 190, 0, 0, 129, 0, 205, 204, 204, 189, 41, 92, 15, 62, 41, 92, 15, 190, 0, 0, 129, 0, 205, 204, 204, 61, 41, 92, 15, 62, 41, 92, 15, 190, 0, 0, 129, 0, 194, 114, 228, 189, 66, 180, 6, 62, 194, 114, 228, 189, 0, 127, 0, 0, 112, 215, 29, 190, 142, 92, 9, 62, 205, 204, 204, 189, 0, 127, 0, 0, 205, 204, 204, 189, 41, 92, 15, 62, 41, 92, 15, 190, 0, 127, 0, 0, 35, 47, 27, 190, 66, 180, 6, 62, 35, 47, 27, 190, 0, 127, 0, 0, 194, 114, 228, 189, 66, 180, 6, 62, 194, 114, 228, 61, 0, 127, 0, 0, 112, 215, 29, 190, 142, 92, 9, 62, 205, 204, 204, 61, 0, 127, 0, 0, 194, 114, 228, 61, 66, 180, 6, 62, 194, 114, 228, 61, 0, 127, 0, 0, 112, 215, 29, 62, 142, 92, 9, 62, 205, 204, 204, 61, 0, 127, 0, 0, 205, 204, 204, 61, 142, 92, 9, 62, 112, 215, 29, 62, 0, 127, 0, 0, 35, 47, 27, 62, 66, 180, 6, 62, 35, 47, 27, 62, 0, 127, 0, 0, 194, 114, 228, 61, 66, 180, 6, 62, 194, 114, 228, 189, 0, 127, 0, 0, 205, 204, 204, 61, 41, 92, 15, 62, 41, 92, 15, 190, 0, 127, 0, 0, 112, 215, 29, 62, 142, 92, 9, 62, 205, 204, 204, 189, 0, 127, 0, 0, 35, 47, 27, 62, 66, 180, 6, 62, 35, 47, 27, 190, 0, 127, 0, 0, 205, 204, 204, 189, 142, 92, 9, 62, 112, 215, 29, 62, 0, 127, 0, 0, 194, 114, 228, 189, 66, 180, 6, 62, 194, 114, 228, 189, 0, 0, 129, 0, 194, 114, 228, 61, 66, 180, 6, 62, 194, 114, 228, 189, 0, 0, 129, 0, 148, 180, 230, 189, 176, 190, 154, 63, 148, 180, 230, 189, 0, 0, 129, 0, 238, 127, 234, 61, 230, 19, 154, 63, 175, 243, 231, 189, 0, 0, 129, 0, 35, 47, 27, 190, 66, 180, 6, 62, 35, 47, 27, 62, 0, 127, 0, 0, 148, 180, 230, 189, 176, 190, 154, 63, 148, 180, 230, 61, 167, 89, 0, 0, 148, 180, 230, 189, 176, 190, 154, 63, 148, 180, 230, 189, 167, 89, 0, 0, 142, 194, 245, 188, 108, 6, 166, 63, 114, 213, 187, 60, 167, 89, 0, 0, 142, 194, 245, 188, 108, 6, 166, 63, 115, 213, 187, 188, 167, 89, 0, 0, 194, 114, 228, 61, 66, 180, 6, 62, 194, 114, 228, 189, 127, 0, 0, 0, 194, 114, 228, 61, 66, 180, 6, 62, 194, 114, 228, 61, 127, 0, 0, 0, 238, 127, 234, 61, 230, 19, 154, 63, 175, 243, 231, 189, 127, 0, 0, 0, 238, 127, 234, 61, 230, 19, 154, 63, 175, 243, 231, 61, 127, 0, 0, 0, 194, 114, 228, 61, 66, 180, 6, 62, 194, 114, 228, 61, 0, 0, 127, 0, 194, 114, 228, 189, 66, 180, 6, 62, 194, 114, 228, 61, 0, 0, 127, 0, 238, 127, 234, 61, 230, 19, 154, 63, 175, 243, 231, 61, 0, 0, 127, 0, 148, 180, 230, 189, 176, 190, 154, 63, 148, 180, 230, 61, 0, 0, 127, 0, 194, 114, 228, 189, 66, 180, 6, 62, 194, 114, 228, 61, 129, 0, 0, 0, 194, 114, 228, 189, 66, 180, 6, 62, 194, 114, 228, 189, 129, 0, 0, 0, 148, 180, 230, 189, 176, 190, 154, 63, 148, 180, 230, 61, 129, 0, 0, 0, 148, 180, 230, 189, 176, 190, 154, 63, 148, 180, 230, 189, 129, 0, 0, 0, 142, 194, 245, 188, 108, 6, 166, 63, 114, 213, 187, 60, 0, 127, 0, 0, 142, 194, 245, 188, 108, 6, 166, 63, 115, 213, 187, 188, 0, 127, 0, 0, 173, 85, 189, 60, 104, 92, 166, 63, 91, 150, 176, 60, 0, 127, 0, 0, 174, 85, 189, 60, 104, 92, 166, 63, 91, 150, 176, 188, 0, 127, 0, 0, 238, 127, 234, 61, 230, 19, 154, 63, 175, 243, 231, 189, 89, 89, 0, 0, 238, 127, 234, 61, 230, 19, 154, 63, 175, 243, 231, 61, 89, 89, 0, 0, 174, 85, 189, 60, 104, 92, 166, 63, 91, 150, 176, 188, 89, 89, 0, 0, 173, 85, 189, 60, 104, 92, 166, 63, 91, 150, 176, 60, 89, 89, 0, 0, 148, 180, 230, 189, 176, 190, 154, 63, 148, 180, 230, 189, 0, 89, 167, 0, 238, 127, 234, 61, 230, 19, 154, 63, 175, 243, 231, 189, 0, 89, 167, 0, 142, 194, 245, 188, 108, 6, 166, 63, 115, 213, 187, 188, 0, 89, 167, 0, 174, 85, 189, 60, 104, 92, 166, 63, 91, 150, 176, 188, 0, 89, 167, 0, 238, 127, 234, 61, 230, 19, 154, 63, 175, 243, 231, 61, 0, 89, 89, 0, 148, 180, 230, 189, 176, 190, 154, 63, 148, 180, 230, 61, 0, 89, 89, 0, 173, 85, 189, 60, 104, 92, 166, 63, 91, 150, 176, 60, 0, 89, 89, 0, 142, 194, 245, 188, 108, 6, 166, 63, 114, 213, 187, 60, 0, 89, 89, 0 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 2, 0, 3, 0, 1, 0, 4, 0, 6, 0, 5, 0, 6, 0, 7, 0, 5, 0, 7, 0, 8, 0, 5, 0, 8, 0, 9, 0, 5, 0, 10, 0, 12, 0, 11, 0, 12, 0, 13, 0, 11, 0, 13, 0, 14, 0, 11, 0, 14, 0, 15, 0, 11, 0, 16, 0, 18, 0, 17, 0, 18, 0, 19, 0, 17, 0, 19, 0, 20, 0, 17, 0, 20, 0, 21, 0, 17, 0, 22, 0, 24, 0, 23, 0, 24, 0, 25, 0, 23, 0, 25, 0, 26, 0, 23, 0, 26, 0, 27, 0, 23, 0, 28, 0, 30, 0, 29, 0, 30, 0, 31, 0, 29, 0, 32, 0, 28, 0, 33, 0, 28, 0, 29, 0, 33, 0, 34, 0, 36, 0, 35, 0, 36, 0, 37, 0, 35, 0, 38, 0, 40, 0, 39, 0, 40, 0, 41, 0, 39, 0, 34, 0, 35, 0, 38, 0, 35, 0, 40, 0, 38, 0, 34, 0, 32, 0, 36, 0, 32, 0, 42, 0, 36, 0, 28, 0, 38, 0, 30, 0, 38, 0, 39, 0, 30, 0, 43, 0, 45, 0, 44, 0, 45, 0, 46, 0, 44, 0, 32, 0, 33, 0, 42, 0, 33, 0, 47, 0, 42, 0, 48, 0, 50, 0, 49, 0, 50, 0, 51, 0, 49, 0, 52, 0, 54, 0, 53, 0, 54, 0, 55, 0, 53, 0, 56, 0, 58, 0, 57, 0, 58, 0, 59, 0, 57, 0, 60, 0, 62, 0, 61, 0, 62, 0, 63, 0, 61, 0, 64, 0, 66, 0, 65, 0, 66, 0, 67, 0, 65, 0, 68, 0, 70, 0, 69, 0, 70, 0, 71, 0, 69, 0, 72, 0, 74, 0, 73, 0, 74, 0, 75, 0, 73, 0, 76, 0, 78, 0, 77, 0, 78, 0, 79, 0, 77, 0 ),
"blend_shape_data": [  ],
"format": 97539,
"index_count": 156,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 80
}

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.16, 0.1, 0.16 )

[node name="Gravestone" type="StaticBody"]
transform = Transform( 1.5625, 0, 0, 0, 1.5625, 0, 0, 0, 1.5625, 1, 0, 0 )
script = ExtResource( 1 )
type = "gravestone"

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
visible = false
mesh = ExtResource( 2 )
material/0 = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="MeshInstance"]
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
visible = false
mesh = ExtResource( 3 )
material/0 = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="MeshInstance2"]
mesh = SubResource( 5 )
material/0 = SubResource( 4 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
visible = false
mesh = ExtResource( 4 )
material/0 = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="MeshInstance3"]
mesh = SubResource( 6 )
material/0 = SubResource( 4 )

[node name="MeshInstance4" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
visible = false
mesh = ExtResource( 5 )
material/0 = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="MeshInstance4"]
mesh = SubResource( 7 )
material/0 = SubResource( 4 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.25 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 8 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
